--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon" type="image/png" href="assets/img/pizza.png">
     <title>Accueil</title>
 </head>
 
@@ -64,34 +65,34 @@
                 <p>Dès à présent dans tout les Let's Pizza!</p>
             </section>
             <section class="row">
-                <div class=" col-sm-4">
-                    <div class="card bg-light placement">
-                        <img class="card-img-top" src="assets/img/malin.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title border-bottom pb-3">Promo</h5>
-                            <p class="card-text">Mardi malin! Profitez du buffet à volonté pour seulement 15€.</p>
-                            <p class="card-text">Offre valide uniquement le mardi midi</p>
-                        </div>
+                <div class="marg col-12 col-sm-3 col-md-4 col-lg-3  ml-auto mr-auto gap">
+                    <img class="card-img-top" src="assets/img/malin.jpg" alt="Image Malin">
+                    <div class="card-body">
+                        <h5 class="card-title border-bottom pb-3">Promo</h5>
+                        <p class="card-text">Mardi malin! Profitez du buffet à volonté pour seulement 15€.</p>
+                        <p class="card-text">Offre valide uniquement le mardi et le jeudi midi.</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="card bg-light placement">
-                        <img class="card-img-top" src="assets/img/new.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title border-bottom pb-3">Nouveauté</h5>
-                            <p class="card-text">Venez goûter notre nouvelle pizza édition spéciale été!</p>
-                            <p class="card-text">La Garden Lovers est uniquement garnie avec des légumes.</p>
-                        </div>
+                <div class="marg col-12 col-sm-3 col-md-4 col-lg-3 ml-auto mr-auto gap">
+                    <img class="card-img-top" src="assets/img/new.jpg" alt="Image nouveauté">
+                    <div class="card-body">
+                        <h5 class="card-title border-bottom pb-3">Nouveauté</h5>
+                        <p class="card-text">Venez goûter notre nouvelle pizza édition spéciale été!</p>
+                        <p class="card-text">La Garden Lovers! Uniquement avec des légumes de saison.</p>
                     </div>
                 </div>
             </section>
         </article>
     </main>
-
     <footer>
-
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                        <p><a class="footer-font" href="#">Vie privée</a> - <a class="footer-font" href="@">Conditions générales</a> - © 2019 Site Web</a></p>
+                </div>
+            </div>
+        </div>
     </footer>
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
