finalisation restaurants.html

--- a/carte.html
+++ b/carte.html
@@ -24,31 +24,32 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="index.html">Accueil
                         </a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link hover" href="carte.html">Carte</a>
+                    <li class="nav-item">
+                        <a class="nav-link hover active" href="carte.html">Carte</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="photos.html">Photos</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="restaurants.html">Restaurants</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a rel="noopener" rel="noreferrer" class="nav-link" href="#">
+                    <li class="nav-item">
+                        <a target="_blank" rel="noopener" rel="noreferrer" class="nav-link color-social"
+                            href="https://facebook.com/">
                             <i class="fab fa-facebook-f"></i> Facebook
                         </a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                    <li class="nav-item">
+                        <a target="_blank" class="nav-link color-social" href="https://instagram.com/">
                             <i class="fab fa-instagram"></i> Instagram</a>
                     </li>
                 </ul>
@@ -65,24 +66,29 @@
                     <div class="list-group">
                         <a href="#sub" class="list-group-item list-group-item-success" data-toggle="collapse"
                             data-parent="#MainMenu">Nos pizzas <i class="fas fa-arrow-down"></i><span
-                                class="badge badge-primary badge-pill right">3</span></a>
+                                class="badge badge-primary badge-pill right">3 Pizzas</span></a>
                         <div class="collapse " id="sub">
                             <a href="#" class="list-group-item left" data-parent="#SubMenu1"><i
-                                    class="fas fa-arrow-right"></i> Jambon</a>
+                                    class="fas fa-arrow-right"></i> Jambon<span
+                                    class="badge badge-primary badge-pill right">7€</span></a>
                             <a href="#" class="list-group-item left" data-parent="#SubMenu1"><i
-                                    class="fas fa-arrow-right"></i> 4 Fromages</a>
+                                    class="fas fa-arrow-right"></i> 4 Fromages<span
+                                    class="badge badge-primary badge-pill right">8€</span></a>
                             <a href="#" class="list-group-item left" data-parent="#SubMenu1"><i
-                                    class="fas fa-arrow-right"></i> Pepperoni</a>
+                                    class="fas fa-arrow-right"></i> Pepperoni<span
+                                    class="badge badge-primary badge-pill right">10€</span></a>
                         </div>
                     </div>
 
                     <div class="espace">
                         <a href="#sub2" class="list-group-item list-group-item-success" data-toggle="collapse"
                             data-parent="#MainMenu">Nos desserts <i class="fas fa-arrow-down"></i><span
-                                class="badge badge-primary badge-pill right">2</span></a>
+                                class="badge badge-primary badge-pill right">2 Desserts</span></a>
                         <div class="collapse" id="sub2">
-                            <a href="#" class="list-group-item left"><i class="fas fa-arrow-right"></i> Tiramisu</a>
-                            <a href="#" class="list-group-item left"><i class="fas fa-arrow-right"></i> Panna cotta</a>
+                            <a href="#" class="list-group-item left"><i class="fas fa-arrow-right"></i> Tiramisu<span
+                                    class="badge badge-primary badge-pill right">3€</span></a>
+                            <a href="#" class="list-group-item left"><i class="fas fa-arrow-right"></i> Panna cotta<span
+                                    class="badge badge-primary badge-pill right">4€</span></a>
                         </div>
                     </div>
                 </div>
