--- a/restaurants.html
+++ b/restaurants.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/restaurants.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -23,31 +24,32 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="index.html">Accueil
                         </a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="carte.html">Carte</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="photos.html">Photos</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link hover" href="restaurants.html">Restaurants</a>
+                    <li class="nav-item">
+                        <a class="nav-link hover active" href="restaurants.html">Restaurants</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a rel="noopener" rel="noreferrer" class="nav-link" href="#">
+                    <li class="nav-item">
+                        <a target="_blank" rel="noopener" rel="noreferrer" class="nav-link color-social"
+                            href="https://facebook.com/">
                             <i class="fab fa-facebook-f"></i> Facebook
                         </a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                    <li class="nav-item">
+                        <a target="_blank" class="nav-link color-social" href="https://instagram.com/">
                             <i class="fab fa-instagram"></i> Instagram</a>
                     </li>
                 </ul>
@@ -58,15 +60,55 @@
     </header>
 
     <main>
-        <article>
-          
+        <article class="container">
+            <div class="row justify-content-center">
+                <div class="card mb-3">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2542.8777916517515!2d4.4389957!3d50.4061151!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c226750391b893%3A0x38f706c7ffab5a0c!2sBeCode+Charleroi!5e0!3m2!1sfr!2sbe!4v1558086384536!5m2!1sfr!2sbe"
+                        width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h5 class="card-title">Let's Pizza Charleroi</h5>
+                        <p class="card-text">
+                            <p>Adresse: Quai Arthur Rimbaud 10, 6000 Charleroi</p>
+                            <ul>Horaires :
+                                <li>lundi 11:30–22:00</li>
+                                <li>mardi 11:30–22:00</li>
+                                <li>mercredi 11:30–22:00</li>
+                                <li>jeudi 11:30–22:00</li>
+                                <li>vendredi 11:30–22:30</li>
+                                <li>samedi 11:30–22:30</li>
+                                <li>dimanche 11:30–22:00</li>
+                                <p>Téléphone : 071 40 55 55</p>
+                    </div>
+                </div>
+                <div class="card mb-3">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.2335991339296!2d4.355096315849172!3d50.8453583667115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c47fd1d960c1%3A0xcbd18b1ea8412062!2sBeCode+Brussels!5e0!3m2!1sfr!2sbe!4v1558087519567!5m2!1sfr!2sbe"
+                        width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h5 class="card-title">Let's Pizza Bruxelles</h5>
+                        <p class="card-text">
+                            <p>Adresse: Cantersteen 10, 1000 Bruxelles</p>
+                            <ul>Horaires :
+                                <li>lundi 11:30–22:00</li>
+                                <li>mardi 11:30–22:00</li>
+                                <li>mercredi 11:30–22:00</li>
+                                <li>jeudi 11:30–22:00</li>
+                                <li>vendredi 11:30–22:30</li>
+                                <li>samedi 11:30–22:30</li>
+                                <li>dimanche 11:30–22:00</li>
+                                <p>Téléphone : 071 40 55 56</p>
+                    </div>
+                </div>
+            </div>
         </article>
     </main>
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                        <p><a class="footer-font" href="#">Vie privée</a> - <a class="footer-font" href="@">Conditions générales</a> - © 2019 Site Web</a></p>
+                    <p><a class="footer-font" href="#">Vie privée</a> - <a class="footer-font" href="@">Conditions
+                            générales</a> - © 2019 Site Web</a></p>
                 </div>
             </div>
         </div>
