--- a/contact.html
+++ b/contact.html
@@ -17,43 +17,43 @@
     <header>
         <!--Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link hover" href="index.html">Accueil
-                        </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link hover" href="carte.html">Carte</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link hover" href="photos.html">Photos</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link hover" href="restaurants.html">Restaurants</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link hover" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a rel="noopener" rel="noreferrer" class="nav-link" href="#">
-                            <i class="fab fa-facebook-f"></i> Facebook
-                        </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">
-                            <i class="fab fa-instagram"></i> Instagram</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <!--/.Navbar -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link hover" href="index.html">Accueil
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link hover" href="carte.html">Carte</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link hover" href="photos.html">Photos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link hover" href="restaurants.html">Restaurants</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link hover active" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a target="_blank" rel="noopener" rel="noreferrer" class="nav-link color-social" href="https://facebook.com/">
+                                <i class="fab fa-facebook-f"></i> Facebook
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a target="_blank" class="nav-link color-social" href="https://instagram.com/">
+                                <i class="fab fa-instagram"></i> Instagram</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <!--/.Navbar -->
         <p class="title">Let's Pizza !</p>
     </header>
 
