--- a/index.html
+++ b/index.html
@@ -23,31 +23,32 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link hover" href="index.html">Accueil
+                    <li class="nav-item">
+                        <a class="nav-link hover active" href="index.html">Accueil
                         </a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="carte.html">Carte</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="photos.html">Photos</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="restaurants.html">Restaurants</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a rel="noopener" rel="noreferrer" class="nav-link" href="#">
+                    <li class="nav-item">
+                        <a target="_blank" rel="noopener" rel="noreferrer" class="nav-link color-social"
+                            href="https://facebook.com/">
                             <i class="fab fa-facebook-f"></i> Facebook
                         </a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                    <li class="nav-item">
+                        <a target="_blank" class="nav-link color-social" href="https://instagram.com/">
                             <i class="fab fa-instagram"></i> Instagram</a>
                     </li>
                 </ul>
@@ -88,7 +89,8 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                        <p><a class="footer-font" href="#">Vie privée</a> - <a class="footer-font" href="@">Conditions générales</a> - © 2019 Site Web</a></p>
+                    <p><a class="footer-font" href="#">Vie privée</a> - <a class="footer-font" href="@">Conditions
+                            générales</a> - © 2019 Site Web</a></p>
                 </div>
             </div>
         </div>
