--- a/photos.html
+++ b/photos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/photos.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -23,31 +24,31 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="index.html">Accueil
                         </a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="carte.html">Carte</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link hover" href="photos.html">Photos</a>
+                    <li class="nav-item">
+                        <a class="nav-link hover active" href="photos.html">Photos</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="restaurants.html">Restaurants</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link hover" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a rel="noopener" rel="noreferrer" class="nav-link" href="#">
+                    <li class="nav-item">
+                        <a target="_blank" rel="noopener" rel="noreferrer" class="nav-link color-social" href="https://facebook.com/">
                             <i class="fab fa-facebook-f"></i> Facebook
                         </a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                    <li class="nav-item">
+                        <a target="_blank" class="nav-link color-social" href="https://instagram.com/">
                             <i class="fab fa-instagram"></i> Instagram</a>
                     </li>
                 </ul>
@@ -58,15 +59,53 @@
     </header>
 
     <main>
-        <article>
-          
+        <article class="container">
+            <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active color-nav" id="pills-1-tab" data-toggle="pill" href="#pills-1" role="tab"
+                        aria-controls="pills-home" aria-selected="true">1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link color-nav" id="pills-2-tab" data-toggle="pill" href="#pills-2" role="tab"
+                        aria-controls="pills-profile" aria-selected="false">2</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link color-nav" id="pills-3-tab" data-toggle="pill" href="#pills-3" role="tab"
+                        aria-controls="pills-contact" aria-selected="false">3</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link color-nav" id="pills-4-tab" data-toggle="pill" href="#pills-3" role="tab"
+                        aria-controls="pills-contact" aria-selected="false">4</a>
+                </li>
+            </ul>
+            <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade show active" id="pills-1" role="tabpanel" aria-labelledby="pills-1-tab">
+                    <img src="assets/img/pizza1.jpg" alt="Pizza01">
+                    <img src="assets/img/pizza2.jpg" alt="Pizza02">
+                    <img src="assets/img/pizza3.jpg" alt="Pizza03">
+                </div>
+                <div class="tab-pane fade" id="pills-2" role="tabpanel" aria-labelledby="pills-2-tab"><img
+                        src="assets/img/pizza4.jpg" alt="Pizza04"> <img src="assets/img/pizza5.jpg" alt="Pizza05">
+                    <img src="assets/img/pizza6.jpg" alt="Pizza06">
+                </div>
+                <div class="tab-pane fade" id="pills-3" role="tabpanel" aria-labelledby="pills-3-tab">
+                    <img src="assets/img/pizza7.jpg" alt="Pizza07"><img src="assets/img/pizza8.jpg" alt="Pizza08">
+                    <img src="assets/img/pizza9.jpg" alt="Pizza09">
+                </div>
+                <div class="tab-pane fade" id="pills-4" role="tabpanel" aria-labelledby="pills-4-tab">
+                    <img src="assets/img/pizza10.jpg" alt="Pizza010">
+                    <img src="assets/img/pizza11.jpg" alt="Pizza011">
+                    <img src="assets/img/pizza12.jpg" alt="Pizza012">
+                </div>
+            </div>
         </article>
     </main>
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                        <p><a class="footer-font" href="#">Vie privée</a> - <a class="footer-font" href="@">Conditions générales</a> - © 2019 Site Web</a></p>
+                    <p><a class="footer-font" href="#">Vie privée</a> - <a class="footer-font" href="@">Conditions
+                            générales</a> - © 2019 Site Web</a></p>
                 </div>
             </div>
         </div>
