--- a/carte.html
+++ b/carte.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/img/pizza.png">
-    <title>Accueil</title>
+    <title>Carte</title>
 </head>
 
 <body>
