--- a/photos.html
+++ b/photos.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/img/pizza.png">
-    <title>Accueil</title>
+    <title>Photos</title>
 </head>
 
 <body>
@@ -25,14 +25,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link hover" href="index.html">Accueil
+                        <a class="nav-link hover active" href="index.html">Accueil
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link hover" href="carte.html">Carte</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link hover active" href="photos.html">Photos</a>
+                        <a class="nav-link hover" href="photos.html">Photos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link hover" href="restaurants.html">Restaurants</a>
@@ -107,7 +107,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                    <p><a class="footer-font" href="#">Vie privée</a> - <a class="footer-font" href="#">Conditions
+                    <p><a class="footer-font" href="#">Vie privée</a> - <a class="footer-font" href="@">Conditions
                             générales</a> - © 2019 Site Web</a></p>
                 </div>
             </div>
